tests/compile-fail/spellcheck.rs
#![feature(plugin)]
#![plugin(ronat)]

/// This is an ererererre.
#[deny(spelling_error)]
pub fn main() {
    // let () = true;
}
